...

  @override
  Widget build(BuildContext context) {
    return MaterialApp(
      home: Scaffold(
        appBar: AppBar(
          title: Text('HOME', style: TextStyle(fontSize: _fontTitleSizeVar)),
        ),
        body: Column(
          mainAxisAlignment: MainAxisAlignment.center,
          children: <Widget>[
            SizedBox(height: _spaceSize),
            Text('Welcome to $_place'),
...
