...
                    crossAxisCount: 2,
                    crossAxisSpacing: 20,
                    mainAxisSpacing: 20,
                    children: <Widget>[
                      MenuItem(
                        icon: Icons.edit_document,
                        label: 'Crear Inventario',
                        onTap: () => _navigateToCustomTabBar(context),
                        color: Colors.white,
                        buttonSize: buttonSize,
                      ),
                      MenuItem(
                        icon: Icons.history,
...
